--- a/views/home.html
+++ b/views/home.html
@@ -39,9 +39,42 @@
                 <p>20% off</p>
                 <h3>MacBook Pro 2019</h3>
             </article>
+            <article>
+                <img width="200px" src="/images/img-samsung-galaxy-s10.jpg">
+                <p>$70.500</p>
+                <p>10% off</p>
+                <h3>Samsung Galaxy S10</h3>
+            </article>
+            <article>
+                <img width="200px" src="/images/img-tv-samsung-smart.jpg">
+                <p>$23.200</p>
+                <p>5% off</p>
+                <h3>SmartTv Samsung 43"</h3>
+            </article>
         </div>
 
     </section>
+    <h2>Sección de Ofertas</h2>
+    <div>
+        <article>
+            <img width="200px" src ="/images/img-cafetera-moulinex.jpg">
+            <p>$6.777</p>
+            <p>40% off</p>
+            <h3>Cafetera Moulinex</h3>
+        </article>
+        <article>
+            <img width="200px" src="/images/img-macbook-pro-2019.jpg">
+            <p>$230.000</p>
+            <p>20% off</p>
+            <h3>MacBook Pro 2019</h3>
+        </article>
+        <article>
+            <img width="200px" src="/images/img-samsung-galaxy-s10.jpg">
+            <p>$70.500</p>
+            <p>10% off</p>
+            <h3>Samsung Galaxy S10</h3>
+        </article>
+    </div>
 </main>
 <footer>
     <div>
