Centrando texto e imagen

--- a/views/home.html
+++ b/views/home.html
@@ -8,9 +8,11 @@
 </head>
 <body>
     <header>
+        <center>
         <img src="/images/logo-mercado-liebre.svg"/>
         <p>Lugar para poner barra de busqueda</p>
         <p>Comprá en cuotas y sin tarjeta de crédito</p>
+        </center>
         <nav>
             <ul>
                 <li><a href="">Ofertas</a></li>
@@ -25,6 +27,7 @@
         </nav>
     </header>
     <section>
+        <center>
         <h2>Basado en tu ultima visita</h2>
         <div>
             <article>
@@ -32,28 +35,31 @@
                 <p>$6.777</p>
                 <p>40% off</p>
                 <h3>Cafetera Moulinex</h3>
-            </article>
-            <article>
+             </article>
+       
+             <article>
                 <img width="200px" src="/images/img-macbook-pro-2019.jpg">
                 <p>$230.000</p>
                 <p>20% off</p>
                 <h3>MacBook Pro 2019</h3>
-            </article>
-            <article>
+             </article>
+             <article>
                 <img width="200px" src="/images/img-samsung-galaxy-s10.jpg">
                 <p>$70.500</p>
                 <p>10% off</p>
                 <h3>Samsung Galaxy S10</h3>
-            </article>
-            <article>
+             </article>
+             <article>
                 <img width="200px" src="/images/img-tv-samsung-smart.jpg">
                 <p>$23.200</p>
                 <p>5% off</p>
                 <h3>SmartTv Samsung 43"</h3>
-            </article>
+        </article>
+        </center>
         </div>
-
+    
     </section>
+    <center>
     <h2>Sección de Ofertas</h2>
     <div>
         <article>
@@ -73,10 +79,13 @@
             <p>$70.500</p>
             <p>10% off</p>
             <h3>Samsung Galaxy S10</h3>
+        </center>
         </article>
+    
     </div>
 </main>
 <footer>
+    <center>
     <div>
         <h4>Paga con tarjeta o en efectivo</h4>
         <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
@@ -95,5 +104,6 @@
     <div>
         <p>Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
     </div>
+    </center>
 </body>
 </html>
